# c-cmake-sdl2-boilerplate

./: .gitignore  CMakeLists.txt  DownloadProject.CMakeLists.cmake.in  Makefile  README.md
.github/workflows/: bin.yml  main.yml
app/: CMakeLists.txt  example_app.c  sample_app.c
src/: CMakeLists.txt  example.c  example.h  sample.c  sample.h
test/: CMakeLists.txt  runner.c  runner2.c
